# rustRet

./: Cargo.toml  README.md
src/: args.rs  machine.rs  main.rs  retentionindex.rs  retentiontime.rs  retentiontimeadj.rs
testfile/: retentionindex.txt  sample.txt
